--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: cmake,
  debhelper (>= 9),
  dh-systemd (>= 1.5),
  liblircclient-dev,
- libusb-dev | libusb-1.0-0-dev,
+ libusb-1.0-0-dev | libusb-dev,
  python-all,
  python3-all,
 Standards-Version: 3.9.8
