better handling of libusb 1 vs pre1

--- a/software/usb_ir/CMakeLists.txt
+++ b/software/usb_ir/CMakeLists.txt
@@ -49,12 +49,21 @@ If("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
 Else()
   include(CheckLibraryExists)
   include(CheckFunctionExists)
+  include(CheckIncludeFile)
 
   # set variables common to all Unix-like systems
   Set(DAEMONSRC daemon.c)
   List(APPEND BASESRC compat-unix.c)
   Set(CMAKE_REQUIRED_FLAGS "-I/usr/include")
   add_c_flag(-pedantic -g -O2)
+
+  # check that we have SOME libusb header
+  CHECK_INCLUDE_FILE("usb.h" HAVE_USB_H)
+  CHECK_INCLUDE_FILE("libusb.h" HAVE_LIBUSB_H)
+  CHECK_INCLUDE_FILE("libusb-1.0/libusb.h" HAVE_USB_10_LIBUSB_H)
+  If(NOT HAVE_USB_H AND NOT HAVE_LIBUSB_H AND NOT HAVE_USB_10_LIBUSB_H)
+    message(FATAL_ERROR "No version of the libusb header files were found.")
+  EndIf()
 
   # see if we have clock_gettime possibly in rt
   check_library_exists(rt clock_gettime "time.h" HAVE_CLOCK_GETTIME)
@@ -134,10 +143,6 @@ If("${PIPESRC}" STREQUAL "pipes.h")
   message(FATAL_ERROR "Unrecognized CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
 EndIf()
 
-# check that we have assorted headers
-include(CheckIncludeFile)
-CHECK_INCLUDE_FILE("libusb-1.0/libusb.h" HAVE_USB_10_LIBUSB_H)
-
 # Make config.h based on what cmake found and include it's path
 configure_file("${CMAKE_SOURCE_DIR}/config.h.in" config.h)
 include_directories(${CMAKE_BINARY_DIR})
@@ -157,9 +162,6 @@ set_target_properties(iguanaIR PROPERTIES
 install(TARGETS iguanaIR
         DESTINATION ${LIBDIR})
 
-# TODO: should have this just build early w/o an explicit dep?
-add_dependencies(iguanaIR VersionH)
-
 # build the library that can be used to communicate with the devices
 add_library(directIguanaIR SHARED
   driver.c driver.h driverapi.h
@@ -174,6 +176,9 @@ set_target_properties(directIguanaIR PROPERTIES
                       SOVERSION ${SO_VER})
 install(TARGETS directIguanaIR
         DESTINATION ${LIBDIR})
+
+# TODO: should have this just build early w/o an explicit dep?
+add_dependencies(directIguanaIR VersionH)
 
 # build the service/server that controls hardware
 add_executable(igdaemon ${DAEMONSRC} ${PIPESRC} ${BASESRC}
