--- a/debian/rules
+++ b/debian/rules
@@ -28,4 +28,11 @@ override_dh_install:
 override_dh_auto_install:
 	make -C software/usb_ir/build
 	make -C software/usb_ir/build install DESTDIR=$(CURDIR)/debian/tmp 
-	make -C software/lirc-drv-iguanair install DESTDIR=$(CURDIR)/debian/tmp 
+	if [ -f /usr/include/lirc_driver.h ]; then \
+		make -C software/lirc-drv-iguanair install DESTDIR=$(CURDIR)/debian/tmp ;\
+	fi
+#ifeq (,$(filter liblirc-dev, $(shell dh_listpackages)))
+	#make -C software/lirc-drv-iguanair install DESTDIR=$(CURDIR)/debian/tmp
+#endif
+
+
