--- a/fedora/iguanair.spec.in
+++ b/fedora/iguanair.spec.in
@@ -148,7 +148,7 @@ fi
 %doc %{usbir}/LICENSE-LGPL
 %doc %{usbir}/WHY
 %doc %{usbir}/README.txt
-%doc %{usbir}/ChangeLog
+%doc ChangeLog
 %doc %{usbir}/examples
 %{_bindir}/igdaemon
 %{_bindir}/igclient
@@ -201,4 +201,5 @@ fi
 
 
 %changelog
-Placeholder.  This content is populated by the make-dist.sh script.
+* Sat Jul 29 2017 Iguanaworks Support <support@iguanaworks.net>
+- Placeholder.  This content is populated by the make-dist.sh script.
