--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: cmake,
  pkg-config,
  debhelper (>= 9),
  dh-systemd (>= 1.5),
+ libsystemd-daemon-dev,
  liblircclient-dev,
  libusb-1.0-0-dev | libusb-dev,
  python-dev,
