--- a/software/usb_ir/drivers/CMakeLists.txt
+++ b/software/usb_ir/drivers/CMakeLists.txt
@@ -8,20 +8,26 @@ EndIf()
 Set(BASESRCS ../logging.c ../list.c)
 
 If("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
-  Set(USBPRE1LIB ${CMAKE_SOURCE_DIR}/win32/libusb-win32/lib/msvc/libusb.lib)
-  Set(COMPILE_OLD true)
-Else()
-  Set(USBPRE1LIB usb)
-  If(NOT "${CMAKE_ARCH}" STREQUAL "arm")
-    If(HAVE_USB_H)
-      Set(COMPILE_OLD true)
-    EndIf()
+  add_library(usb SHARED IMPORTED)
+  set_property(TARGET usb PROPERTY
+               IMPORTED_IMPLIB ${CMAKE_SOURCE_DIR}/win32/libusb-win32/lib/msvc/libusb.lib)
+  include_directories(${CMAKE_SOURCE_DIR}/win32/libusb-1.0-win32/include)
 
-    If(HAVE_LIBUSB_H OR HAVE_USB_10_LIBUSB_H)
-      Set(COMPILE_NEW true)
-      Set(EXCLUDE EXCLUDE_FROM_ALL)
-      Set(NEEDED OPTIONAL)
-    EndIf()
+  add_library(usb-1.0 SHARED IMPORTED)
+  set_property(TARGET usb-1.0 PROPERTY
+               IMPORTED_IMPLIB ${CMAKE_SOURCE_DIR}/win32/libusb-1.0-win32/MS32/dll/libusb-1.0.lib)
+  include_directories(${CMAKE_SOURCE_DIR}/win32/libusb-win32/include)
+EndIf()
+
+If(NOT "${CMAKE_ARCH}" STREQUAL "arm")
+  If(HAVE_USB_H)
+    Set(COMPILE_OLD true)
+  EndIf()
+
+  If(HAVE_LIBUSB_H OR HAVE_USB_10_LIBUSB_H)
+    Set(COMPILE_NEW true)
+    Set(EXCLUDE EXCLUDE_FROM_ALL)
+    Set(NEEDED OPTIONAL)
   EndIf()
 EndIf()
 
@@ -46,7 +52,7 @@ If(COMPILE_OLD)
   add_library(usbpre1drv SHARED ${EXCLUDE} libusbpre1.c ${BASESRCS})
   set_property(TARGET usbpre1drv
                APPEND PROPERTY COMPILE_DEFINITIONS DRIVER_EXPORTS)
-  target_link_libraries(usbpre1drv ${USBPRE1LIB})
+  target_link_libraries(usbpre1drv usb)
   If(TARGET_ANDROID)
     target_link_libraries(usbpre1drv usb-compat-android)
   EndIf()
